# HS-GameJam-24

./: .gitignore  README.md  demo-script.sh  pyproject.toml  test.txt
server/: alien.py  main.py  test.ipynb
src/: generate-alien.py
