[project]
name = "gamejam24"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.1.1",
    "diffusers>=0.31.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "openai>=1.55.3",
    "safetensors>=0.4.5",
    "scipy>=1.14.1",
    "torch>=2.5.1",
    "transformers>=4.46.3",
]
